<resources>
    <string name="app_name">NewsApp</string>

    <!-- bottom navigation title -->
    <string name="navigation_top_news">Top News</string>
    <string name="navigation_categories_label">Category - {category}</string>
    <string name="navigation_categories">Categories</string>
    <string name="navigation_saved">Saved</string>

    <string name="navigation_news_detail">{label}</string>

    <!-- contentDescription -->
    <string name="image_top_news">Image Top News</string>
    <string name="news_writed_time">%1$s hours ago</string>

    <!-- dummyHint -->
    <string name="dummy_top_news_title">10 of the Cheapest and Healthiest Ways
    to Feed a Group, According to Reddit BlarBlarBlarBlarBlarBlarBlarBlarBlar</string>
    <string name="dummy_description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recentlywith desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_writer">Pedro Berrrill</string>
    <string name="dummy_writed_time">3 hours ago</string>

    <!-- category -->
    <string name="category_main_title">Choose a category to\nstart reading</string>
    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>