<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories"
    app:startDestination="@id/navigation_categories">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.wantedpreonboarding.presentation.categories.CategoriesFragment"
        android:label="@string/navigation_categories"
        tools:layout="@layout/fragment_categories">

        <action
            android:id="@+id/action_navigation_categories_to_navigation_categories_top_news"
            app:destination="@id/navigation_categories_top_news" />
    </fragment>


    <fragment
        android:id="@+id/navigation_categories_top_news"
        android:name="com.example.wantedpreonboarding.presentation.categories.categoriesnews.CategoriesNewsFragment"
        android:label="@string/navigation_categories_label"
        tools:layout="@layout/fragment_categories_news">

        <argument
            android:name="category"
            app:argType="string"
            />
        <action
            android:id="@+id/action_navigation_categories_top_news_to_navigation_news_detail"
            app:destination="@id/navigation_news_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news_detail"
        android:name="com.example.wantedpreonboarding.presentation.detail.NewsDetailFragment"
        android:label="@string/navigation_news_detail"
        tools:layout="@layout/fragment_news_detail">
        <argument
            android:name="topNews"
            app:argType="com.example.wantedpreonboarding.presentation.model.TopNews" />
        <argument
            android:name="label"
            app:argType="string" />
    </fragment>

</navigation>