<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="238dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="328dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/style_top_news_card"
        >
        <ImageView
            android:id="@+id/iv_top_news"
            android:layout_width="326dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_top_news"/>
        <TextView
            android:id="@+id/tv_top_news_title"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_top_news"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            tools:hint="@string/dummy_top_news_title"
            android:maxLines = "2"
            android:ellipsize="end"
            android:textAlignment = "textStart"
            style = "@style/NewsTitle"
            />

        <TextView
            android:id="@+id/tv_top_news_writer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:hint = "@string/dummy_writer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_news_title"
            app:layout_constraintEnd_toStartOf="@id/gl_center"
            android:layout_marginTop="16.54dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            style = "@style/NewsWriter"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

        <TextView
            android:id="@+id/tv_top_news_writed_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:hint = "@string/dummy_writed_time"
            app:layout_constraintStart_toEndOf="@id/gl_center"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_news_title"
            android:layout_marginTop="16.54dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            style= "@style/NewsWritedTime"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



    

</androidx.constraintlayout.widget.ConstraintLayout>