<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detail.NewsDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="19dp">
        
        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="290dp"
            android:layout_height="57dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLines="3"
            android:ellipsize="end"
            android:textAlignment = "textStart"
            tools:hint = "@string/dummy_top_news_title"
            style = "@style/NewsTitle"

            />
        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            android:contentDescription="@null"
            android:src = "@drawable/ic_star_selector"/>

        <TextView
            android:id="@+id/tv_news_writer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14dp"
            tools:hint = "@string/dummy_writer"
            style = "@style/NewsWriter"
            />

        <TextView
            android:id="@+id/tv_news_writed_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:hint = "@string/dummy_writed_time"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            app:layout_constraintStart_toEndOf="@id/tv_news_writer"
            android:layout_marginTop="14dp"
            android:layout_marginStart="10dp"
            />
        
        <ImageView
            android:id="@+id/iv_news_image"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            app:layout_constraintTop_toBottomOf="@id/tv_news_writed_time"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tv_news_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/iv_news_image"
            android:layout_marginTop="16dp"
            style= "@style/NewsDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>